--- a/packages/rn-connector/package.json
+++ b/packages/rn-connector/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-noname-rn-connector",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "Connector react-native for rn-noname",
   "main": "index.js",
   "author": "Marvin FRACHET, Alexandre GORY",
@@ -9,8 +9,8 @@
     "build": "babel src --out-dir dist --copy-files"
   },
   "dependencies": {
-    "rn-snoopy": "^2.0.2",
-    "rn-noname-connector": "^0.1.0"
+    "rn-noname-connector": "^0.0.1",
+    "rn-snoopy": "^2.0.2"
   },
   "peerDependencies": {
     "react-native": "^0.49.0"
