--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,10 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.2"
+  "npmClient": "yarn",
+  "npmClientArgs": [
+    "--production",
+    "--no-optional"
+  ],
+  "version": "0.0.3"
 }
