fix(cli): add bin in package.json of rn-noname
update readme

--- a/packages/connector/package.json
+++ b/packages/connector/package.json
@@ -6,7 +6,7 @@
   "author": "Marvin FRACHET, Alexandre GORY",
   "license": "MIT",
   "scripts": {
-    "build": "babel src --out-dir dist --copy-files --ignore '**/*.spec.js'"
+    "build": "babel src --out-dir dist --copy-files"
   },
   "dependencies": {
     "rxjs": "^6.1.0",
