--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "An application for debugging React-Native App",
   "main": "index.js",
+  "bin": {
+    "noName": "./src/cli/index"
+  },
   "scripts": {
     "serve": "node ./src/cli/index --np",
     "test": "jest --coverage",
