--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-noname-cli",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Connector react-native for rn-noname",
   "main": "index.js",
   "author": "Marvin FRACHET, Alexandre GORY",
@@ -9,8 +9,8 @@
     "noname": "./cli.js"
   },
   "dependencies": {
-    "rn-noname": "^0.1.3",
-    "commander": "^2.0.2"
+    "commander": "^2.0.2",
+    "rn-noname": "^0.1.4"
   },
   "peerDependencies": {
     "react-native": "^0.49.0"
