--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rn-noname-cli",
   "version": "0.1.5",
-  "description": "Connector react-native for rn-noname",
+  "description": "Cli react-native for rn-noname",
   "main": "index.js",
   "author": "Marvin FRACHET, Alexandre GORY",
   "license": "MIT",
