--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "description": "An application for debugging React-Native App",
   "main": "index.js",
   "scripts": {
-    "build": "next build",
+    "build": "NODE_ENV=production next build",
     "serve": "node ./src/cli/index --np",
     "test": "jest --coverage",
     "format": "prettier-eslint --write \"pages/**/*.js\" && prettier-eslint --write \"src/**/*.js\" && prettier-eslint --write \"stories/**/*.js\"",
@@ -15,8 +15,8 @@
   "author": "Marvin FRACHET, Alexandre GORY",
   "license": "MIT",
   "dependencies": {
-    "@material-ui/core": "^1.1.0",
-    "@zeit/next-css": "^0.1.5",
+    "@material-ui/core": "^1.2.1",
+    "@zeit/next-css": "^0.2.0",
     "commander": "^2.14.1",
     "express": "^4.16.2",
     "highlight.js": "^9.12.0",
@@ -25,6 +25,7 @@
     "object-sizeof": "^1.2.0",
     "opn": "^5.2.0",
     "prop-types": "^15.6.1",
+    "jss": "^9.7.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-jss": "^8.4.0",
